# serverless-demo

./: .gitignore  .pre-commit-config.yaml  package-lock.json  package.json  pyproject.toml  serverless.yml
.github/: pull_request_template.md
.github/workflows/: config.yml
config/: dev.yml  local.yml  prod.yml
endpoints/: users.py
layers/: README.md
models/: dummyjson.py
submodules/: dummyjson.py  secrets.py
tests/: test_dummyjson.py
tests/data/: get_users.json
