[tool.poetry]
name = "serverless-framework-demo"
version = "0.1.0"
description = ""
authors = ["Raheel Lakhpaty <raheel.lakhpaty@airbnb.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
boto3 = "^1.24.60"
pydantic = "^1.9.2"

[tool.poetry.dev-dependencies]
pylint = "^2.15.0"
pytest = "^7.1.2"
black = "^22.6.0"
isort = "^5.10.1"
pytest-mock = "^3.8.2"
pytest-datadir = "^1.3.1"
requests-mock = "^1.10.0"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120

[tool.pylint.messages_control]
# ignoring (C)onvention, (R)efactor,
# (W0511) todo/fixme
# (W1203) % lazy formatting in logging
# (W0105) multiline comment
disable = "R,C,W0511,W1203,W0603,W0105"
# ignore pylint error "no-name-in-module" in "from pydantic import BaseModel"
extension-pkg-whitelist = "pydantic"

[tool.pylint.format]
max-line-length = "120"

[tool.black]
line-length = 120
